frontend: fix buttons not getting wrapped

--- a/frontend/src/components/common/HeaderWithButtons/index.module.css
+++ b/frontend/src/components/common/HeaderWithButtons/index.module.css
@@ -4,7 +4,13 @@
   align-items: flex-start;
 }
 
+.text {
+  flex: 2;
+}
 .buttons {
   display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-end;
   gap: 0.5rem;
+  flex: 1;
 }
